# pixiu-claude

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml
docs/: 202602201430-pixiu-system-design.md  202602201445-pixiu-project-documentation.md  202602201830-llm-agent-layer.md  202602211000-fund-universe-expansion.md  202602211306-pixiu-profit-maximization-fixes.md  202602221319-agent-architecture-upgrade-openclaw.md  202602231515-feishu-bot-integration.md
prompts/: decision_engine_system.md  decision_engine_template.md  market_analyst_system.md  market_analyst_template.md  reflection_system.md  reflection_template.md
src/: config.py  main.py
src/agent/: __init__.py  brain.py  budget.py  debate.py  errors.py  llm.py  market_intel.py  news.py  prompts.py  reflection.py  scenario.py  schemas.py
src/analysis/: fund_flow.py  fund_scorer.py  indicators.py  learner.py  market_regime.py  seasonal.py  sector_rotation.py  signal_guard.py
src/bot/: __init__.py  app.py  cards.py  handlers.py  router.py  sender.py  session.py
src/data/: eastmoney.py  fallback.py  fetcher.py  fund_data.py  fund_discovery.py  fund_manager.py  macro.py  market_data.py  sentiment.py  valuation.py
src/memory/: context.py  database.py  trade_journal.py
src/report/: portfolio_report.py  recommendation.py  templates.py
src/risk/: asset_allocation.py  correlation.py  cost_calculator.py  drawdown.py  dynamic_stop.py  position_sizing.py
src/scheduler/: jobs.py
src/strategy/: base.py  dca_hybrid.py  macro_cycle.py  manager_alpha.py  momentum.py  (+7 more)
